--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^12.19.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
