--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.19.1",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
